--- a/package.json
+++ b/package.json
@@ -24,12 +24,16 @@
   "dependencies": {
     "config": "^1.24.0",
     "koa": "^1.2.4",
-    "koa-better-body": "^3.0.2",
+    "koa-bodyparser": "^2.3.0",
+    "koa-generic-session": "^1.11.4",
+    "koa-passport": "^1.4.0",
     "koa-qs": "^2.0.0",
     "koa-static": "^2.0.0",
     "lodash": "^4.17.3",
     "moment": "^2.17.1",
     "mongoose": "^4.7.5",
+    "passport": "^0.3.2",
+    "passport-local": "^1.0.0",
     "request-promise": "^4.1.1",
     "winston": "^2.3.0",
     "winston-daily-rotate-file": "git+https://github.com/winstonjs/winston-daily-rotate-file.git"
