--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "mongoose": "^4.7.5",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
+    "path-to-regexp": "^1.7.0",
     "request-promise": "^4.1.1",
     "winston": "^2.3.0",
     "winston-daily-rotate-file": "git+https://github.com/winstonjs/winston-daily-rotate-file.git"
